syntax = "proto3";

package queue_pb;

option go_package = "github.com/memocash/index/db/proto/queue_pb";

service Queue {
  rpc SaveMessages (Messages) returns (ErrorReply) {
  }
  rpc DeleteMessages (MessageUids) returns (ErrorReply) {
  }
  rpc GetMessage (RequestSingle) returns (Message) {
  }
  rpc GetMessages (Request) returns (Messages) {
  }
  rpc GetByPrefixes (RequestPrefixes) returns (Messages) {
  }
  rpc GetStreamMessages(RequestStream) returns (stream Message) {
  }
  rpc GetTopicList (EmptyRequest) returns (TopicListReply) {
  }
  rpc GetMessageCount (CountRequest) returns (TopicCount) {
  }
}

message Messages {
  repeated Message messages = 1;
}

message Message {
  bytes uid = 1;
  string topic = 2;
  bytes message = 3;
  int64 timestamp = 4;
}

message ErrorReply {
  string error = 1;
}

message MessageUids {
  string topic = 1;
  repeated bytes uids = 2;
}

message RequestSingle {
  string topic = 1;
  bytes uid = 2;
}

message Request {
  string topic = 1;
  bytes start = 2;
  uint32 max = 3;
  repeated bytes prefixes = 4;
  repeated bytes uids = 5;
  bool newest = 6;
}

message RequestStream {
  string topic = 1;
  repeated bytes prefixes = 2;
}

message EmptyRequest {
}

message Topic {
  string name = 1;
  uint64 count = 2;
}

message TopicListReply {
  repeated Topic topics = 1;
}

message CountRequest {
  string topic = 1;
  bytes prefix = 2;
}

message TopicCount {
  uint64 count = 1;
}

message RequestPrefixes {
  string topic = 1;
  repeated RequestPrefix prefixes = 2;
  uint32 limit = 3;
  Order order = 4;
}

enum Order {
  ASC = 0;
  DESC = 1;
}

message RequestPrefix {
  bytes prefix = 1;
  bytes start = 2;
  uint32 limit = 3;
}
